--- a/style.css
+++ b/style.css
@@ -8,23 +8,26 @@ body {
 header {
     background-color: #4CAF50;
     color: white;
-    padding: 1rem 0;
+    padding: 1.5rem 0;
     text-align: center;
 }
 
 header h1 {
     margin: 0;
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
 
 nav {
     background-color: #333;
     overflow: hidden;
+    text-align: center;
+
 }
 
 nav a {
     float: left;
     display: block;
+    /* display: grid; */
     color: white;
     text-align: center;
     padding: 1rem;
