--- a/navigation/navstyle.css
+++ b/navigation/navstyle.css
@@ -3,29 +3,37 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    background-color: #f5f5f5;
+    background-color: #f9f9f9;
+    color: #333;
 }
 
 header {
-    background-color: #333;
-    color: white;
-    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
 }
 
 nav {
-    background-color: #333;
+    /* background-color: #333;
     overflow: hidden;
-    text-align: center;
-
+    text-align: center; */
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 nav a {
-    float: left;
+    margin-left: 1rem;
+        text-decoration: none;
+        color: #333;
+    /* float: left;
     display: block;
     display: grid;
     color: white;
     text-align: center;
     padding: 1rem;
-    text-decoration: none;
+    text-decoration: none; */
 }
 input {
     padding: 10px;
@@ -35,7 +43,17 @@ input {
     border: 1px solid #ccc;
     border-radius: 5px;
 }
+.kreak {
+    background-color: #333;
+    color: white;
+    padding: 1.5rem 0;
+    text-align: center;
+}
 
+.kreak h1 {
+    margin: 0;
+    font-size: 3rem;
+}
 main {
     padding: 20px;
 }
